--- a/css/estilos.css
+++ b/css/estilos.css
@@ -150,7 +150,8 @@
 }
 .sectiondividida{
     display: flex;
-    height: 70vh;
+    height: 50vh;
+
 }
 
 .etiquetas2{
@@ -197,7 +198,7 @@
     padding: 2rem;
     background-color: rgb(70, 77, 85) ;
     color: rgb(248, 241, 241);
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     display: flex;
     flex-direction: column;
     align-items:flex-start;
@@ -233,6 +234,96 @@
    font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
 }
+
+.compratickets{
+    width: 100%;
+display: flex; 
+justify-content: center;
+align-items: center;
+
+}
+
+.tarjetastickets{
+    width: 100%;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    padding-right: 20%;
+    padding-left: 20%;
+    justify-content: space-between;
+    margin-top: 5%;
+
+}
+.negrita{
+    font-weight: bold;
+}
+
+.tarjetaestud{
+    border: 1px solid rgb(4, 34, 100);
+    width: 30%;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    padding-top: 2%;
+
+}
+
+.tarjetatrainee{
+    border: 1px solid rgb(104, 140, 219);
+    width: 30%;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    padding-top: 2%;
+
+}
+
+.tarjetajunior{
+    border: 1px solid rgb(235, 236, 137);
+    width: 30%;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    padding-top: 2%;
+
+}
+
+.venta{
+   text-align: center;
+   margin-top: 2%;
+
+}
+
+.container{
+    padding-right: 10%;
+    padding-left: 10%;
+}
+ 
+.botones2{
+    display: inline-block;
+    width: 100%;
+}
+
+.borrar{
+    border: 1px solid #eff1f5;
+    padding: 10px;
+    background-color:rgb(42, 173, 42);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 10px;
+    text-decoration: none;
+}
+
+.Enviar2{
+    border: 1px solid #eff1f5;
+    padding: 10px;
+    background-color:rgb(42, 173, 42);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 10px;
+    text-decoration: none;
+}
+
 
 
 
@@ -271,12 +362,14 @@
     height: auto;
     padding: 10% 0;
     justify-content: center;
+
   
 }
 .botones{ 
-    position: static;
-    top: 0%;right: 0%;
-    text-align: center;
+    /*position: static;*/
+    top: 0%;right: 2%;
+   /* text-align: center;*/
+    justify-content: center;
    
 }
 
@@ -288,21 +381,23 @@
     margin-bottom: 1rem;
 }
 .sectiondividida{
-    width: 100%;
+   width: 100%;
+   display: flex;
+ 
     
 }
 .imgizq{
     width: 50%;
+    flex-direction: column;
 }
 .contenidoder{
-    width: 50%;
+   width: 50%;
+   flex-direction: column;
   
 }
 
 .footer{
     height: auto;
 }
+
 }
-
-/* box shadow!/*
-
